--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = d1_mini_pro
 framework = arduino
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
+lib_deps = arduino-libraries/NTPClient@^3.1.0
