--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
-lib_deps = arduino-libraries/NTPClient@^3.1.0
+lib_deps = 
+	arduino-libraries/NTPClient@^3.1.0
+	paulstoffregen/Time@^1.6
